--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
     "express-basic-auth": "^1.2.1",
+    "express-jwt": "^8.4.1",
+    "jsonwebtoken": "^9.0.2",
     "lowdb": "^1.0.0",
     "yup": "^1.3.2"
   },
