--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "nodemon src/app.ts",
     "start": "node src/app.js",
     "build": "tsc src/app.ts",
-    "build:css": "tailwindcss build public/assets/style.css -o public/assets/style.css"
+    "build:css": "tailwindcss build assets/app.css -o public/style.css --watch"
   },
   "author": "",
   "license": "ISC",
@@ -16,12 +16,14 @@
     "express": "^4.18.2",
     "express-basic-auth": "^1.2.1",
     "express-jwt": "^8.4.1",
+    "express-session": "^1.17.3",
     "jsonwebtoken": "^9.0.2",
     "lowdb": "^1.0.0",
     "yup": "^1.3.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.18",
+    "@types/express-session": "^1.17.10",
     "@types/lowdb": "^1.0.12",
     "nodemon": "^3.0.1",
     "tailwindcss": "^3.3.5",
